--- a/styles/form.css
+++ b/styles/form.css
@@ -6,6 +6,12 @@ footer {
   border: solid;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
 .menu {
   list-style: none;
   display: flex;
