New Folder Structure

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,60 +1,5 @@
+@import "./global.css";
 @import "/styles/bookmarks.css";
 @import "./form.css";
 @import "./profile.css";
-
-header {
-  background-color: gray;
-}
-.question-container {
-  background-color: lightgray;
-}
-.question-box {
-  position: relative;
-}
-.bookmark {
-  width: 20px;
-  position: relative;
-  left: 90%;
-}
-.question-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.choice-container {
-  display: flex;
-  gap: 5px;
-}
-
-.category-container {
-  display: flex;
-  gap: 5px;
-}
-
-.answer-txt-unvisible {
-  visibility: hidden;
-}
-
-.answer-txt-visible {
-  visibility: visible;
-}
-
-.category-txt {
-  border: solid 1px;
-  padding: 2px;
-}
-
-footer {
-  border: solid;
-}
-
-.menu {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-  padding: 2px;
-}
-.menu-icon {
-  width: 20px;
-}
+@import "./home.css";
