--- a/styles/home.css
+++ b/styles/home.css
@@ -37,11 +37,18 @@ header {
 }
 .answer-button {
   border: solid 2px White;
-  border-radius: 5px;
+  border-radius: 50px;
   padding: 10px;
   background-color: #7303c0;
   color: White;
+  cursor: pointer;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.answer-button:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 .answer-txt-unvisible {
   visibility: hidden;
 }
