--- a/styles/home.css
+++ b/styles/home.css
@@ -32,11 +32,15 @@ header {
   align-items: center;
 }
 
+.question-txt {
+  text-align: center;
+}
+
 .choice-container {
   display: flex;
   gap: 3px;
 }
-.answer-button {
+.choice {
   border: solid 2px White;
   border-radius: 50px;
   padding: 10px;
@@ -45,17 +49,9 @@ header {
   cursor: pointer;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.answer-button:hover {
+.choice:hover {
   transform: scale(1.05);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.answer-txt-unvisible {
-  visibility: hidden;
-}
-
-.answer-txt-visible {
-  visibility: visible;
 }
 
 .category-container {
