--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -2,7 +2,7 @@ nav {
   position: fixed;
   bottom: 0;
   height: 7vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   background-color: white;
   z-index: 10;
